--- a/styles.css
+++ b/styles.css
@@ -89,12 +89,14 @@ body {
 /*REPORTES STYLES*/
 
 .card{
-  width: 889px;
-  height: 652px;
+  width: 900px;
+  height: 750px;
   border-radius: 6px;
  color: #4a4a4a;
     display: block;
     padding: 1.25rem;
+    margin-top: 100px;
+    margin-left: 700px;
 }
 .card-title{
   font-size: 40px;
@@ -108,7 +110,8 @@ h4{
   text-align: center;
 }
 .imagen-reportes{
-  margin: 50px;
+  margin-top: 75px;
+  margin-bottom: 75px;
+  margin-left: 100px;
   height: 350px;
-  align-content: center;
 }
