--- a/styles.css
+++ b/styles.css
@@ -91,10 +91,10 @@ body {
 .card{
   width: 900px;
   height: 750px;
-  border-radius: 6px;
+  border-radius: 10px;
  color: #4a4a4a;
     display: block;
-    padding: 1.25rem;
+    padding: 20px;
     margin-top: 100px;
     margin-left: 700px;
 }
