--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: gold
+  background-color: gold;
 }
 
 * {
@@ -8,19 +8,20 @@ body {
   margin: 0;
 }
 
-.balance{
+.balance {
   background-color: white;
   padding: 15px;
   border-radius: 10px;
   margin-bottom: 40px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, .3);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
-.balance h5{
+.balance h5 {
   display: flex;
   justify-content: space-between;
 }
 
 /*Header*/
+
 .navbar {
   height: 150px;
   background-color: aquamarine;
@@ -55,25 +56,25 @@ body {
   flex-direction: column;
 }
 
-.filtros{
+.filtros {
   background-color: white;
   padding: 15px;
   border-radius: 10px;
   margin-bottom: 40px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, .3);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
-.container-btn-ocultar-filtros{
+.container-btn-ocultar-filtros {
   display: flex;
   justify-content: space-between;
 }
 
-.operaciones{
+.operaciones {
   background-color: white;
   padding: 15px;
   border-radius: 10px;
   margin-bottom: 40px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, .3);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 /*Main Balance*/
@@ -85,33 +86,31 @@ body {
   height: 800px;
 }
 
-
 /*REPORTES STYLES*/
 
-.card{
+.card {
   width: 900px;
   height: 750px;
   border-radius: 10px;
- color: #4a4a4a;
-    display: block;
-    padding: 20px;
-    margin-top: 100px;
-    margin-left: 700px;
+  color: black;
+  padding: 10px;
 }
-.card-title{
+.card-title {
   font-size: 40px;
 }
-h4{
+h4 {
   font-size: 24px;
   text-align: center;
 }
-.card-text{
+.card-text {
   font-size: 16px;
   text-align: center;
 }
-.imagen-reportes{
-  margin-top: 75px;
-  margin-bottom: 75px;
+.imagen-reportes {
   margin-left: 100px;
   height: 350px;
+  margin: 80px;
+}
+.container {
+  margin-top: 100px;
 }
