--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   background-color: gold;
+  height: 1500px;
 }
 
 * {
@@ -88,17 +89,19 @@ body {
 
 /*REPORTES STYLES*/
 
-.card {
+/*HOJA DE REPORTES INSUFICIENTES*/
+.card-insuficiente {
   width: 900px;
   height: 750px;
   border-radius: 10px;
   color: black;
   padding: 10px;
+  background-color: aliceblue;
 }
 .card-title {
   font-size: 40px;
 }
-h4 {
+.operaciones-insuficientes {
   font-size: 24px;
   text-align: center;
 }
@@ -113,4 +116,20 @@ h4 {
 }
 .container {
   margin-top: 100px;
+}
+
+/*HOJA DE REPORTES*/
+.card-reportes {
+  width: 900px;
+  height: 900px;
+  border-radius: 10px;
+  color: black;
+  padding: 10px;
+  background-color: aliceblue;
+}
+.titulo-reportes-h4 {
+  font-size: 24px;
+}
+h3 {
+  font-size: 16px;
 }
