--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: gold
+
 }
 
 * {
@@ -83,4 +83,26 @@ body {
   border-radius: 10px;
   padding: 10px;
   height: 800px;
+}
+
+.content-box {
+  background-color: #fff;
+  border-radius: 6px;
+  box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
+  color: #4a4a4a;
+  display: block;
+  padding: 1.25rem;
+  margin-bottom: 25px;
+}
+
+button a {
+  color: white;
+  text-decoration: none;
+  list-style: none;
+}
+
+.navbar-link {
+  color: white;
+  text-decoration: none;
+  list-style: none;
 }
