--- a/categorias.css
+++ b/categorias.css
@@ -1,3 +1,25 @@
+body {
+  background-color: gold;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.balance {
+  background-color: white;
+  padding: 15px;
+  border-radius: 10px;
+  margin-bottom: 40px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
+.balance h5 {
+  display: flex;
+  justify-content: space-between;
+}
+
 /*Header*/
 
 .navbar {
@@ -13,6 +35,7 @@
 .nav-link {
   margin-left: 15px;
 }
+
 /*main-categories*/
 
 .main-categories {
@@ -25,7 +48,7 @@
 }
 
 .container-main-categories {
-  width: 800px;
+  width: 900px;
   padding: 10px;
   background-color: aliceblue;
   border-radius: 10px;
@@ -41,8 +64,11 @@
   width: 100%;
   padding: 5px;
 }
+
 input {
   width: 700px;
+  border-radius: 5px;
+  padding: 5px;
 }
 
 .example-row {
@@ -52,4 +78,11 @@ input {
 
 .example-container {
   padding: 10px;
+}
+
+button {
+  border: none;
+  border-radius: 5px;
+  padding: 8px;
+  margin: 8px;
 }
